// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScaleFilter /> should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    onItemClicked={[Function]}
    scales={Array []}
    selectedScales={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Flex
          align="center"
          justify="space-between"
          padding="1rem"
>
          <styled.p
                    size={13}
                    weight={600}
          >
                    Filter by Price Scale
          </styled.p>
          <styled.button
                    onClick={undefined}
          >
                    Clear
          </styled.button>
</Flex>,
        <styled.div
          height="270px"
>
          <styled.ul>
                    
          </styled.ul>
</styled.div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": "center",
          "children": Array [
            <styled.p
              size={13}
              weight={600}
>
              Filter by Price Scale
</styled.p>,
            <styled.button
              onClick={undefined}
>
              Clear
</styled.button>,
          ],
          "justify": "space-between",
          "padding": "1rem",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Filter by Price Scale",
              "size": 13,
              "weight": 600,
            },
            "ref": null,
            "rendered": "Filter by Price Scale",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Clear",
              "onClick": undefined,
            },
            "ref": null,
            "rendered": "Clear",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.ul>
            
</styled.ul>,
          "height": "270px",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [],
          },
          "ref": null,
          "rendered": Array [],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Flex
            align="center"
            justify="space-between"
            padding="1rem"
>
            <styled.p
                        size={13}
                        weight={600}
            >
                        Filter by Price Scale
            </styled.p>
            <styled.button
                        onClick={undefined}
            >
                        Clear
            </styled.button>
</Flex>,
          <styled.div
            height="270px"
>
            <styled.ul>
                        
            </styled.ul>
</styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "align": "center",
            "children": Array [
              <styled.p
                size={13}
                weight={600}
>
                Filter by Price Scale
</styled.p>,
              <styled.button
                onClick={undefined}
>
                Clear
</styled.button>,
            ],
            "justify": "space-between",
            "padding": "1rem",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Filter by Price Scale",
                "size": 13,
                "weight": 600,
              },
              "ref": null,
              "rendered": "Filter by Price Scale",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Clear",
                "onClick": undefined,
              },
              "ref": null,
              "rendered": "Clear",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.ul>
              
</styled.ul>,
            "height": "270px",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [],
            },
            "ref": null,
            "rendered": Array [],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<ScaleFilter /> should render correctly with scales 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    onItemClicked={[Function]}
    scales={
        Array [
            Object {
              "id": 1,
              "name": "Some Scale 1",
            },
            Object {
              "id": 2,
              "name": "Some Scale 2",
            },
            Object {
              "id": 3,
              "name": "Some Scale 3",
            },
            Object {
              "id": 4,
              "name": "Some Scale 4",
            },
            Object {
              "id": 5,
              "name": "Some Scale 5",
            },
          ]
    }
    selectedScales={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Flex
          align="center"
          justify="space-between"
          padding="1rem"
>
          <styled.p
                    size={13}
                    weight={600}
          >
                    Filter by Price Scale
          </styled.p>
          <styled.button
                    onClick={undefined}
          >
                    Clear
          </styled.button>
</Flex>,
        <styled.div
          height="270px"
>
          <styled.ul>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 1
                              </styled.p>
                    </styled.li>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 2
                              </styled.p>
                    </styled.li>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 3
                              </styled.p>
                    </styled.li>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 4
                              </styled.p>
                    </styled.li>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 5
                              </styled.p>
                    </styled.li>
          </styled.ul>
</styled.div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": "center",
          "children": Array [
            <styled.p
              size={13}
              weight={600}
>
              Filter by Price Scale
</styled.p>,
            <styled.button
              onClick={undefined}
>
              Clear
</styled.button>,
          ],
          "justify": "space-between",
          "padding": "1rem",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Filter by Price Scale",
              "size": 13,
              "weight": 600,
            },
            "ref": null,
            "rendered": "Filter by Price Scale",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Clear",
              "onClick": undefined,
            },
            "ref": null,
            "rendered": "Clear",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.ul>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 1
                        </styled.p>
            </styled.li>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 2
                        </styled.p>
            </styled.li>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 3
                        </styled.p>
            </styled.li>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 4
                        </styled.p>
            </styled.li>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 5
                        </styled.p>
            </styled.li>
</styled.ul>,
          "height": "270px",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 1
                </styled.p>
</styled.li>,
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 2
                </styled.p>
</styled.li>,
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 3
                </styled.p>
</styled.li>,
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 4
                </styled.p>
</styled.li>,
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 5
                </styled.p>
</styled.li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 1
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 1",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 1",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 2
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 2",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 2",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 3
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 3",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 3",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 4
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 4",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 4",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "5",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 5
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 5",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 5",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Flex
            align="center"
            justify="space-between"
            padding="1rem"
>
            <styled.p
                        size={13}
                        weight={600}
            >
                        Filter by Price Scale
            </styled.p>
            <styled.button
                        onClick={undefined}
            >
                        Clear
            </styled.button>
</Flex>,
          <styled.div
            height="270px"
>
            <styled.ul>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 1
                                    </styled.p>
                        </styled.li>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 2
                                    </styled.p>
                        </styled.li>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 3
                                    </styled.p>
                        </styled.li>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 4
                                    </styled.p>
                        </styled.li>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 5
                                    </styled.p>
                        </styled.li>
            </styled.ul>
</styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "align": "center",
            "children": Array [
              <styled.p
                size={13}
                weight={600}
>
                Filter by Price Scale
</styled.p>,
              <styled.button
                onClick={undefined}
>
                Clear
</styled.button>,
            ],
            "justify": "space-between",
            "padding": "1rem",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Filter by Price Scale",
                "size": 13,
                "weight": 600,
              },
              "ref": null,
              "rendered": "Filter by Price Scale",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Clear",
                "onClick": undefined,
              },
              "ref": null,
              "rendered": "Clear",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.ul>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 1
                            </styled.p>
              </styled.li>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 2
                            </styled.p>
              </styled.li>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 3
                            </styled.p>
              </styled.li>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 4
                            </styled.p>
              </styled.li>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 5
                            </styled.p>
              </styled.li>
</styled.ul>,
            "height": "270px",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 1
                  </styled.p>
</styled.li>,
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 2
                  </styled.p>
</styled.li>,
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 3
                  </styled.p>
</styled.li>,
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 4
                  </styled.p>
</styled.li>,
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 5
                  </styled.p>
</styled.li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 1
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 1",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 1",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 2
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 2",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 2",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "3",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 3
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 3",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 3",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "4",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 4
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 4",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 4",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "5",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 5
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 5",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 5",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<ScaleFilter /> should render correctly with selected scales 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    onItemClicked={[Function]}
    scales={
        Array [
            Object {
              "id": 1,
              "name": "Some Scale 1",
            },
            Object {
              "id": 2,
              "name": "Some Scale 2",
            },
            Object {
              "id": 3,
              "name": "Some Scale 3",
            },
            Object {
              "id": 4,
              "name": "Some Scale 4",
            },
            Object {
              "id": 5,
              "name": "Some Scale 5",
            },
          ]
    }
    selectedScales={
        Array [
            Object {
              "id": 1,
              "name": "Some Scale 1",
            },
            Object {
              "id": 2,
              "name": "Some Scale 2",
            },
            Object {
              "id": 3,
              "name": "Some Scale 3",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Flex
          align="center"
          justify="space-between"
          padding="1rem"
>
          <styled.p
                    size={13}
                    weight={600}
          >
                    Filter by Price Scale
          </styled.p>
          <styled.button
                    onClick={undefined}
          >
                    Clear
          </styled.button>
</Flex>,
        <styled.div
          height="270px"
>
          <styled.ul>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 1
                              </styled.p>
                    </styled.li>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 2
                              </styled.p>
                    </styled.li>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 3
                              </styled.p>
                    </styled.li>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 4
                              </styled.p>
                    </styled.li>
                    <styled.li>
                              <styled.input
                                        checked={false}
                                        onChange={[Function]}
                              />
                              <styled.p
                                        size={13}
                              >
                                        Some Scale 5
                              </styled.p>
                    </styled.li>
          </styled.ul>
</styled.div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": "center",
          "children": Array [
            <styled.p
              size={13}
              weight={600}
>
              Filter by Price Scale
</styled.p>,
            <styled.button
              onClick={undefined}
>
              Clear
</styled.button>,
          ],
          "justify": "space-between",
          "padding": "1rem",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Filter by Price Scale",
              "size": 13,
              "weight": 600,
            },
            "ref": null,
            "rendered": "Filter by Price Scale",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Clear",
              "onClick": undefined,
            },
            "ref": null,
            "rendered": "Clear",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <styled.ul>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 1
                        </styled.p>
            </styled.li>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 2
                        </styled.p>
            </styled.li>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 3
                        </styled.p>
            </styled.li>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 4
                        </styled.p>
            </styled.li>
            <styled.li>
                        <styled.input
                                    checked={false}
                                    onChange={[Function]}
                        />
                        <styled.p
                                    size={13}
                        >
                                    Some Scale 5
                        </styled.p>
            </styled.li>
</styled.ul>,
          "height": "270px",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 1
                </styled.p>
</styled.li>,
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 2
                </styled.p>
</styled.li>,
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 3
                </styled.p>
</styled.li>,
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 4
                </styled.p>
</styled.li>,
              <styled.li>
                <styled.input
                                checked={false}
                                onChange={[Function]}
                />
                <styled.p
                                size={13}
                >
                                Some Scale 5
                </styled.p>
</styled.li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 1
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 1",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 1",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 2
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 2",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 2",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 3
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 3",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 3",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 4
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 4",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 4",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "5",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.input
                    checked={false}
                    onChange={[Function]}
/>,
                  <styled.p
                    size={13}
>
                    Some Scale 5
</styled.p>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Some Scale 5",
                    "size": 13,
                  },
                  "ref": null,
                  "rendered": "Some Scale 5",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Flex
            align="center"
            justify="space-between"
            padding="1rem"
>
            <styled.p
                        size={13}
                        weight={600}
            >
                        Filter by Price Scale
            </styled.p>
            <styled.button
                        onClick={undefined}
            >
                        Clear
            </styled.button>
</Flex>,
          <styled.div
            height="270px"
>
            <styled.ul>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 1
                                    </styled.p>
                        </styled.li>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 2
                                    </styled.p>
                        </styled.li>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 3
                                    </styled.p>
                        </styled.li>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 4
                                    </styled.p>
                        </styled.li>
                        <styled.li>
                                    <styled.input
                                                checked={false}
                                                onChange={[Function]}
                                    />
                                    <styled.p
                                                size={13}
                                    >
                                                Some Scale 5
                                    </styled.p>
                        </styled.li>
            </styled.ul>
</styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "align": "center",
            "children": Array [
              <styled.p
                size={13}
                weight={600}
>
                Filter by Price Scale
</styled.p>,
              <styled.button
                onClick={undefined}
>
                Clear
</styled.button>,
            ],
            "justify": "space-between",
            "padding": "1rem",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Filter by Price Scale",
                "size": 13,
                "weight": 600,
              },
              "ref": null,
              "rendered": "Filter by Price Scale",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Clear",
                "onClick": undefined,
              },
              "ref": null,
              "rendered": "Clear",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <styled.ul>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 1
                            </styled.p>
              </styled.li>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 2
                            </styled.p>
              </styled.li>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 3
                            </styled.p>
              </styled.li>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 4
                            </styled.p>
              </styled.li>
              <styled.li>
                            <styled.input
                                          checked={false}
                                          onChange={[Function]}
                            />
                            <styled.p
                                          size={13}
                            >
                                          Some Scale 5
                            </styled.p>
              </styled.li>
</styled.ul>,
            "height": "270px",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 1
                  </styled.p>
</styled.li>,
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 2
                  </styled.p>
</styled.li>,
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 3
                  </styled.p>
</styled.li>,
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 4
                  </styled.p>
</styled.li>,
                <styled.li>
                  <styled.input
                                    checked={false}
                                    onChange={[Function]}
                  />
                  <styled.p
                                    size={13}
                  >
                                    Some Scale 5
                  </styled.p>
</styled.li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 1
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 1",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 1",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 2
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 2",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 2",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "3",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 3
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 3",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 3",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "4",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 4
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 4",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 4",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "5",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <styled.input
                      checked={false}
                      onChange={[Function]}
/>,
                    <styled.p
                      size={13}
>
                      Some Scale 5
</styled.p>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Some Scale 5",
                      "size": 13,
                    },
                    "ref": null,
                    "rendered": "Some Scale 5",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
